# callcentar-ai

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.http.yml  docker-compose.yml  mcp_http_server.py  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  test_mcp.py  test_mcp_http.py  test_mcp_tools.py
.streamlit/: config.toml
agents/: intake_agent.py  routing_agent.py  scoring_agent.py  summarization_agent.py  transcription_agent.py
app/: config.py  main.py
docs/: api.md  architecture.md  deployment.md  examples.md  mcp_http_deployment.md  mcp_server.md  troubleshooting.md
graph/: edges.py  state.py  workflow.py
samples/: history-mexico.txt  transcript1.txt  transcript2.txt  transcript3.txt
schemas/: input_schemas.py  metadata_schemas.py  output_schemas.py
services/: audio_processor.py  deepgram_service.py  guardrails_service.py  openai_service.py  whisper_service.py
tests/: conftest.py
tests/test_agents/: test_intake_agent.py  test_routing_agent.py  test_scoring_agent.py  test_summarization_agent.py  test_transcription_agent.py
tests/test_graph/: test_edges.py
tests/test_schemas/: test_metadata_schemas.py  test_output_schemas.py
tests/test_services/: test_audio_processor.py  test_guardrails_service.py  test_openai_service.py
tests/test_utils/: test_scoring_utils.py
utils/: scoring_utils.py
